parser/tests/snapshots/test_parser__ops_bool.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(ops_bool), expressions::parse_expr, \"a or b and c\")"

---
Node(
  kind: BoolOperation(
    left: Node(
      kind: Name("a"),
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    op: Node(
      kind: Or,
      span: Span(
        start: 2,
        end: 4,
      ),
    ),
    right: Node(
      kind: BoolOperation(
        left: Node(
          kind: Name("b"),
          span: Span(
            start: 5,
            end: 6,
          ),
        ),
        op: Node(
          kind: And,
          span: Span(
            start: 7,
            end: 10,
          ),
        ),
        right: Node(
          kind: Name("c"),
          span: Span(
            start: 11,
            end: 12,
          ),
        ),
      ),
      span: Span(
        start: 5,
        end: 12,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
