parser/tests/snapshots/test_parser__ops_neg.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(ops_neg), expressions::parse_expr, \"-x\")"

---
Node(
  kind: UnaryOperation(
    op: Node(
      kind: USub,
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    operand: Node(
      kind: Name("x"),
      span: Span(
        start: 1,
        end: 2,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 2,
  ),
)
