parser/tests/snapshots/test_parser__ops_not.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(ops_not), expressions::parse_expr, \"x and not y\")"

---
Node(
  kind: BoolOperation(
    left: Node(
      kind: Name("x"),
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    op: Node(
      kind: And,
      span: Span(
        start: 2,
        end: 5,
      ),
    ),
    right: Node(
      kind: UnaryOperation(
        op: Node(
          kind: Not,
          span: Span(
            start: 6,
            end: 9,
          ),
        ),
        operand: Node(
          kind: Name("y"),
          span: Span(
            start: 10,
            end: 11,
          ),
        ),
      ),
      span: Span(
        start: 6,
        end: 11,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
)
