parser/tests/snapshots/test_parser__ops_shift.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(ops_shift), expressions::parse_expr, \"a << b >> c\")"

---
Node(
  kind: BinOperation(
    left: Node(
      kind: BinOperation(
        left: Node(
          kind: Name("a"),
          span: Span(
            start: 0,
            end: 1,
          ),
        ),
        op: Node(
          kind: LShift,
          span: Span(
            start: 2,
            end: 4,
          ),
        ),
        right: Node(
          kind: Name("b"),
          span: Span(
            start: 5,
            end: 6,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 6,
      ),
    ),
    op: Node(
      kind: RShift,
      span: Span(
        start: 7,
        end: 9,
      ),
    ),
    right: Node(
      kind: Name("c"),
      span: Span(
        start: 10,
        end: 11,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
)
