parser/tests/snapshots/test_parser__stmt_assert_msg.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(stmt_assert_msg), functions::parse_stmt,\n           \"assert x == y, z\")"

---
Node(
  kind: Assert(
    test: Node(
      kind: CompOperation(
        left: Node(
          kind: Name("x"),
          span: Span(
            start: 7,
            end: 8,
          ),
        ),
        op: Node(
          kind: Eq,
          span: Span(
            start: 9,
            end: 11,
          ),
        ),
        right: Node(
          kind: Name("y"),
          span: Span(
            start: 12,
            end: 13,
          ),
        ),
      ),
      span: Span(
        start: 7,
        end: 13,
      ),
    ),
    msg: Some(Node(
      kind: Name("z"),
      span: Span(
        start: 15,
        end: 16,
      ),
    )),
  ),
  span: Span(
    start: 0,
    end: 16,
  ),
)
